박봉근/크롬 다크모드에서 글자 색 변경/25.10.01

--- a/client/src/assets/common.css
+++ b/client/src/assets/common.css
@@ -30,3 +30,13 @@
 .btn-color:hover {
   background-color: #3e5879;
 }
+
+/* 다크 모드 감지 */
+@media (prefers-color-scheme: dark) {
+  .btn-color {
+    color: #fff;
+  }
+  .btn-white {
+    color: #000;
+  }
+}
