--- a/client/src/assets/common.css
+++ b/client/src/assets/common.css
@@ -40,3 +40,15 @@
     color: #000;
   }
 }
+
+/* modal-container */
+.modal-container {
+  padding: 8px 10px;
+}
+.btn-common-modal {
+  width: 80px;
+  padding: 4px 8px;
+  border-radius: 8px;
+  font-size: 16px;
+  margin: 0 3px;
+}
