이한솔/품질-추가수정/25.10.14

--- a/client/src/assets/common.css
+++ b/client/src/assets/common.css
@@ -74,4 +74,5 @@
   --p-checkbox-checked-border-color: #213555 !important;
   --p-checkbox-checked-hover-border-color: #213555 !important;
   --p-checkbox-checked-focus-border-color: #213555 !important;
+  --p-primary-50: #ebeef3 !important;
 }
